Vendredi : premières sessions de l'après-midi OK

--- a/tests/vendredi_v2.html
+++ b/tests/vendredi_v2.html
@@ -428,7 +428,7 @@
 					<div>
 						<div class="debut heure">15h00</div>
 						<div class="salle heure">GC</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/le-paradoxe-du-poisson-rouge">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-le-paradoxe-du-poisson-rouge">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Le paradoxe du poisson rouge</h3>
@@ -443,22 +443,22 @@
 					<div>
 						<div class="debut heure">15h00</div>
 						<div class="salle heure">S1</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/un-pacman-ping-ou-impact-mapping">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-un-pacman-ping-ou-impact-mapping">
 							<div class="parent grid-item--height6">
 								<div class="enfant">
 									<h3>Un Pacman Ping ? Ou Impact Mapping ?</h3>
-									<p>Alexandre SICARD</p>
+									<p>Alexandre SICARD & Arnaud FLORENTIN</p>
 								</div>
 							</div>
 						</a>
 						<div class="fin heure">17h00</div>
 					</div>
 				</div>
-				<div class="grid-item grid-item--height6 c3 PM2 RE" style="position: absolute; left: 33.2%; top: 1090px; opacity: 1; width: 16.4%;">
+				<div class="grid-item grid-item--height6 c3 PM2 AJ" style="position: absolute; left: 33.2%; top: 1090px; opacity: 1; width: 16.4%;">
 					<div>
 						<div class="debut heure">15h00</div>
 						<div class="salle heure">S2</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/coding-dojos-partagez-les-bonnes-pratiques">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-coding-dojos-partagez-les-bonnes-pratiques">
 							<div class="parent grid-item--height6">
 								<div class="enfant">
 									<h3>Coding Dojos : partagez les bonnes pratiques</h3>
@@ -473,7 +473,7 @@
 					<div>
 						<div class="debut heure">15h00</div>
 						<div class="salle heure">S3</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/cook-my-retro">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-cook-my-retro">
 							<div class="parent grid-item--height6">
 								<div class="enfant">
 									<h3>Cook my Retro !</h3>
@@ -488,7 +488,7 @@
 					<div>
 						<div class="debut heure">15h00</div>
 						<div class="salle heure">S4</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/mes-premiers-pas-de-scrum-master">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-mes-premiers-pas-de-scrum-master">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Mes premiers pas de Scrum Master</h3>
@@ -503,7 +503,7 @@
 					<div>
 						<div class="debut heure">15h00</div>
 						<div class="salle heure">S5</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/le-planning-la-racine-du-mal">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-le-planning-la-racine-du-mal">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Le Planning, la racine du mal ?</h3>
@@ -1240,6 +1240,301 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 							Cette conférence iconoclaste, non technique, s’adresse à toute personne ayant eu un premier contact avec un projet de développement logiciel (clients, donneurs d’ordre, développeurs,chefs de projet, product owner, scrum master…)
 						</div>
 					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-le-paradoxe-du-poisson-rouge" tabindex="-1" role="dialog" aria-labelledby="#modal-le-paradoxe-du-poisson-rouge-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Le paradoxe du poisson rouge</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="CF" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Conférence</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Dans un monde complexe en perpétuel mouvement, un pays semble se distinguer dans son aisance à l’appréhender : la Chine.
+						<br/><br/>
+						Un animal particulier y est célébré depuis longtemps : le poisson rouge - pas celui qui tourne en rond dans son bocal mais la carpe koï, élégante et colorée, ornant majestueusement les bassins des jardins publics.
+						<br/><br/>
+						La culture populaire lui confère 8 grandes vertus, toutes issues de la sagesse chinoise, lui permettant de vivre en harmonie avec son environnement et de saisir les opportunités avec agilité. Ces idées sont autant d’inspirations dans notre développement personnel que dans nos pratiques professionnelles.
+						<br/><br/>
+						Je vous invite donc à les découvrir afin d’ouvrir votre champ de perspectives et réveiller le Chinois qui sommeille en vous ! ;-)
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/olivier-my.jpeg" style="height:8rem"/>
+						Olivier My - <a href="https://twitter.com/OyoMy">@OyoMy</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Coach Agile et Coach Professionnel, j'accompagne des individus, des équipes et des organisations ayant l’envie d’aller vers plus d’adaptabilité, de résilience et de pérennité humaine dans ce monde en perpétuel mouvement. Dans ce sens, je les aide à mobiliser les énergies vers un objectif porteur de sens, à mieux coopérer ensemble et à changer avec plaisir. Mon approche se veut simple et légère, sans injonction et teintée de développement personnel.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-un-pacman-ping-ou-impact-mapping" tabindex="-1" role="dialog" aria-labelledby="#modal-un-pacman-ping-ou-impact-mapping-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Un Pacman Ping ? ou Impact Mapping ?</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="AJ" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Atelier/Jeu</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Lorsque l'on débute un projet, on a toujours plein d'idées à mettre en oeuvre, à réaliser, à développer.
+						<br/>
+						Mais comme le dit le célèbre Jeff Patton "Il y a toujours plus à créer qu'il n'y a de personnes disponibles, de temps et d'argent à y consacrer".
+						<br/>
+						Comment savoir parmi toutes ces idées lesquelles garder ? lesquelles nous permettent d'avancer dans la bonne direction et de faire de ce projet un succès ?
+						<br/>
+						Il faudrait pour celà avoir en tête l'objectif du projet. Mais malheureusement, lorsque sa formalisation existe, c'est souvent le fruit d'une réflexion isolée qui n'est pas forcément compréhensible par tous.
+						<br/>
+						Alors pour clarifier tout ça, si l'on mettait la performance collective au service de cette phase de réflexion essentielle à un projet avec un Impact Mapping ?
+						<br/>
+						Tout deviendrait alors plus clair pour toutes les personnes jouant un rôle sur ce projet : savoir quel est l'objectif, qui sera concerné, comment et en quoi !
+					</p>
+					<hr/>
+					<div>
+						Alexandre Sicard
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Je m’appelle Alexandre, grand gaillard d’origine savoyarde ce qui explique que pour me protéger du froid j’aime bien la bonne bouffe ! Pour autant, je suis un adepte des sports nautiques, de la voile au kitesurf.
+						<br/>
+						J’ai fait mes études à Grenoble, m’orientant d’abord vers le domaine de l’électronique et des nanotechnologies, mes envies d’ailleurs (et de chocolat) m’ont menées jusqu’en suisse avant de rencontrer une bretonne qui m’a donné l’envie de rester dans le pays du chouchen.
+						<br/>
+						Débutant ma jeune carrière dans des Entreprises de Services du Numérique, j’ai maintenant la joie de travailler pour Claranet où agilité et gestion de produits rythme mon quotidien.
+						<br/>
+						Je viens rencontrer des passionnés d’agilité à l’ATR depuis quelques temps maintenant. Ce n’est que depuis cette année que j’ai décidé de franchir le pas et de partager mon expérience en dehors de Claranet. Le sujet que je présente cette année, je le connais bien J : je le pratique régulièrement et je l’explique au travers d’ateliers, de présentations et/ou de formations en interne depuis plus d’1 an avec notre Guilde Agile.
+					</p>
+					<hr/>
+					<div>
+						Arnaud Florentin
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-coding-dojos-partagez-les-bonnes-pratiques" tabindex="-1" role="dialog" aria-labelledby="#modal-coding-dojos-partagez-les-bonnes-pratiques-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Coding Dojos: partagez les bonnes pratiques !</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="AJ" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Atelier/Jeu</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						A l'instar d'un sportif ou un musicien, un développeur devrait s'entrainer pour progresser.
+						<br/>
+						Et pourtant peu d'entre nous le font...
+						<br/>
+						Venez découvrir par la pratique ce qu'est un coding dojo, et profiter du retour d'expérience de Pascal Le Merrer, qui organise des coding dojos hebdomadaires chez Orange depuis près de 8 ans.
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/pascal-lm.jpg" style="height:8rem"/>
+						Pascal Le Merrer
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Je suis développeur chez Orange Labs à Rennes, dans une équipe qui crée des logiciels dans le domaine de la cybersécurité.
+						<br/>
+						Je me reconnais dans le mouvement Software Craftsmanship, et j'adore partager ce que j’apprends.
+						<br/>
+						Je suis co-organisateur du meetup <a href="https://www.meetup.com/fr-FR/Software-Craftsmanship-Rennes/">Software Crafts•wo•manship meetup</a> à Rennes, et de la non-conférence [Socrates Rennes](https://socrates-rennes.github.io/).
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-cook-my-retro" tabindex="-1" role="dialog" aria-labelledby="#modal-cook-my-retro-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Cook my Retro !</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="AJ" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Atelier/Jeu</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Vous souhaitez diversifier vos rétrospectives ou autres ateliers de cohésion d’équipe, mais le catalogue présent sur internet ne vous convient pas.
+						<br/>
+						Alors Inventez votre propre jeu !
+						<br/>
+						Avec Cook My Retro, vous saurez créer votre propre Rétro,  de l’accueil à l’apéro !
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/jean-baptiste-le-goff.jpg" style="height:8rem"/>
+						Jean-Baptiste Le Goff - <a href="https://twitter.com/jylege">@/jylege</a>
+					</div>
+					<br/>
+					<hr/>
+						<img src="orateurs/kavishan-ganeshamoorthy.JPG" style="height:8rem"/>
+						Kavishan GANESHAMOORTHY
+					<hr/>
+					<p style="text-align: justify">
+						Un grand bonjour à l'Agile Tour Rennes et au Couvent des Jacobins ! nous, c'est Kavishan et Jean-Baptiste.
+						<br/><br/>
+						Vous savez quoi, aujourd'hui, nous avons vraiment la niaque, nous avons la pêche. Comme tous les jours d'ailleurs. Nous ne savons pas pourquoi ? Peut-être parce qu'au fond de nous, nous sommes des SCRUM Masters. D'ailleurs nous avons remarqué depuis 2 ans que nous aimions bien faciliter les choses.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-mes-premiers-pas-de-scrum-master" tabindex="-1" role="dialog" aria-labelledby="#modal-mes-premiers-pas-de-scrum-master-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Mes premiers pas de Scrum Master</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="TR" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Table ronde</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Un jour, au détour d’un bureau j’ai entendu parler des méthodes Agile.
+						<br/>
+						Curieuse, j’ai demandé une formation sur le sujet et ce fut pour moi la révélation.
+						<br/>
+						Suite à cette session, je n’ai eu plus qu’une idée en tête, devenir Scrum Master !
+						<br/>
+						Pleine d’enthousiasme et de bonne volonté, j’ai donc demandé à changer de casquette.
+						<br/><br/>
+						Me voilà donc promu Scrum Master !!!! Tadaaaa !!!
+						<br/><br/>
+						Ok et maintenant ?! Je fais quoi ? Par où je commence ?
+						<br/><br/>
+						Nous sommes probablement plusieurs à s'être posé ces questions.
+						<br/>
+						Aussi nous vous proposons de partager ensemble nos expériences en tant que Scrum Master autour d'une table ronde.
+						<br/>
+						Le but ? Construire ensemble un "Kit de survie du Scrum Master".
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/maryline-estival-elodie.jpg" style="height:8rem"/>
+						Elodie Tual - Maryline Estival
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Il était une fois dans l'agglomération Rennaise, une société qui s'appelait Capgemini.
+						<br/>
+						Cette société voulait se lancer dans la quête de l'agilité. Pour cela, elle recruta plusieurs scrum master.
+						<br/>
+						Parmi eux, Maryline et Elodie.
+						<br/>
+						Maryline, était une responsable produit qui rêvait de specs évolutives.
+						<br/>
+						Elodie était une chef de projet cycle en V, qui essayait de faire de l'itératif.
+						<br/>
+						Ensemble, elles se portèrent volontaires pour relever des défis et décidèrent de suivre une formation agile certifiante.
+						<br/>
+						Fortes de leurs réussites, elles embarquèrent confiantes dans des sujets Défense.
+						<br/>
+						C'est alors que le loup garou de la réalité les rattrapa ...
+						<br/>
+						Le loup garou les submergea de questions et de remarques assassines :
+						<br/>
+						"- Les daily, moi vivant, jamais !
+						<br/>
+						- Le daily c'est vraiment tous les jours ?
+						<br/>
+						- Quelle est ta capa initiale ?
+						<br/>
+						- Comment peut-on découper cette story ?
+						<br/>
+						- Dans mon ancien projet, on ne faisait pas comme ça !"
+						<br/>
+						Désemparées, Maryline et Elodie puisèrent leur réconfort dans des jeux de société.
+						<br/>
+						Elles décidèrent d'en faire une arme : le DSCards
+						<br/>
+						Conscientes que l'union fait la force, firent à la guilde des Scrum Master pour parfaire leur arme et terrasser le loup garou ensemble.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-le-planning-la-racine-du-mal" tabindex="-1" role="dialog" aria-labelledby="#modal-le-planning-la-racine-du-mal-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Le Planning, la racine du mal ?</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="CF" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Conférence</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Notre président qui annonce que Notre Dame sera reconstruite dans 5 ans ça vous fait sourire ?
+						<br/>
+						Ça vous rappelle un projet peut être ? Peut être un de ceux pour lesquels on annonce une date en sachant pertinemment qu'elle ne sera pas tenue ?
+						<br/>
+						Et si elle est tenue, le résultat n'est pas beau à voir...
+						<br/>
+						Aujourd'hui encore la planification est omniprésente, enseignée à l'école et incontournable dans les certifications de gestion de projet.
+						<br/>
+						Aujourd'hui encore les entreprises se lancent dans des démarches étiquetées agiles en conservant sous une forme ou une autre un planning, symbole sacré du triple engagement fonctionnalité - coût - délai, amen.
+						<br/>
+						Il est temps de te pointer du doigt toi planning prévisionnel, toi budget annuel ou toi forfait agile et de te déconstruire, objections après objections, pour mieux te reconstruire... mais en pas pareil !
+						<br/>
+						Attention ! Pas de #planningbashing ici, juste une invitation à se poser des questions, découvrir ou redécouvrir des idées et trouver une alternative qui nous convienne
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/antoine-cailly.jpg" style="height:8rem"/>
+						Antoine Cailly - <a href="https://twitter.com/AntoineCailly">@AntoineCailly</a>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Je suis développeur chez Zenika Rennes. Guidé par ma curiosité, j'essaye de comprendre pourquoi nous agissons comme nous le faisons. Il me reste du chemin à parcourir...
+					</p>
 				</div>
 			</div>
 		</div>
