Vendredi : deuxièmes sessions de l'après-midi OK

--- a/tests/vendredi_v2.html
+++ b/tests/vendredi_v2.html
@@ -522,7 +522,7 @@
 					<div>
 						<div class="debut heure">16h00</div>
 						<div class="salle heure">GC</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/une-semaine-dans-ma-peau-de-testeur-agile">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-une-semaine-dans-ma-peau-de-testeur-agile">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Une semaine dans ma peau de testeur agile</h3>
@@ -537,7 +537,7 @@
 					<div>
 						<div class="debut heure">16h00</div>
 						<div class="salle heure">S4</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/alors-on-a-du-mal-a-comprendre-safe">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-alors-on-a-du-mal-a-comprendre-safe">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>Alors on a du mal à comprendre SaFe ?</h3>
@@ -552,7 +552,7 @@
 					<div>
 						<div class="debut heure">16h00</div>
 						<div class="salle heure">S5</div>
-						<a href="https://app.klaxoon.com/userspace/networks/appel-a-orateurs-agile-tour-rennes-2019/articles/la-spirale-agile-1">
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-la-spirale-agile-1">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
 									<h3>La Spirale Agile</h3>
@@ -1399,7 +1399,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 					<hr/>
 					<div>
 						<img src="orateurs/jean-baptiste-le-goff.jpg" style="height:8rem"/>
-						Jean-Baptiste Le Goff - <a href="https://twitter.com/jylege">@/jylege</a>
+						Jean-Baptiste Le Goff - <a href="https://twitter.com/jylege">@jylege</a>
 					</div>
 					<br/>
 					<hr/>
@@ -1455,7 +1455,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 						<img src="orateurs/maryline-estival-elodie.jpg" style="height:8rem"/>
 						Elodie Tual - Maryline Estival
 					</div>
-					<hr/>
+					<br/>
 					<p style="text-align: justify">
 						Il était une fois dans l'agglomération Rennaise, une société qui s'appelait Capgemini.
 						<br/>
@@ -1531,9 +1531,149 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 						<img src="orateurs/antoine-cailly.jpg" style="height:8rem"/>
 						Antoine Cailly - <a href="https://twitter.com/AntoineCailly">@AntoineCailly</a>
 					</div>
-					<hr/>
+					<br/>
 					<p style="text-align: justify">
 						Je suis développeur chez Zenika Rennes. Guidé par ma curiosité, j'essaye de comprendre pourquoi nous agissons comme nous le faisons. Il me reste du chemin à parcourir...
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-une-semaine-dans-ma-peau-de-testeur-agile" tabindex="-1" role="dialog" aria-labelledby="#modal-une-semaine-dans-ma-peau-de-testeur-agile-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Une semaine dans ma peau de testeur agile</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="CF" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Conférence</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Le testeur, ou le QA, on voit très bien ce qu'il fait avant le passage à l'agilité : il teste... Plus précisément, il valide les changements, il vérifie la non-régression, et puis il fait aussi d'autres trucs à côté.
+						<br/>
+						Par contre que fait-il maintenant qu'on travaille en agile ? Ce n'est évident pour personne, d'autant plus qu'on l'a intégré dans l'équipe agile. Comment peut-il bien faire tout ce qu'il faisait avant mais désormais en juste une itération ? Et puis on n'arrête pas de parler d'automatisation des tests, a-t-on vraiment encore besoin de testeur ?
+						<br/>
+						Pourquoi ne pas répondre à ces questions en suivant un testeur agile pendant une semaine ? Pendant une semaine, vous allez voir à quoi ressemble le quotidien d'un testeur agile, voir ce qu'il fait de ses journées, voir toute la valeur qu'il ajoute à l'équipe sans se positionner pour autant en garant de la prod.
+						<br/>
+						Je suis un agiliste auto-didacte et j'ai d'ailleurs un avis très mitigé sur les certifications. Loin de tout dogmatisme, attendez-vous à voir avant tout du retour d'expérience, du vécu. Le tout sur le ton de l'humour et du troll !
+						<br/>
+						Vous verrez que le rôle de testeur agile est plein de subtilités. Contrairement à ce qu'on pourrait imaginer il a énormément de travail et la plupart des équipes gagneraient à un avoir un !
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/jp-lambert.jpg" style="height:8rem"/>
+						Jean-Pierre Lambert - <a href="https://twitter.com/jpierrelambert">@jpierrelambert</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Avant, j'étais un ingénieur logiciel. Mais peut-être pas le genre que vous imaginez ; les outils et les belles architectures logicielles me laissaient de marbre. Non, mon truc, c’était plutôt la qualité, la valeur produit, les process et les relations humaines.
+						<br/>
+						Du coup, maintenant, j'aide les équipes en tant que coach agile & qualité. Mais aussi en animant Scrum Life, la chaîne YouTube qui parle d'agilité sans tabou et avec humour. Ce n'est pas plus mal !
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-alors-on-a-du-mal-a-comprendre-safe" tabindex="-1" role="dialog" aria-labelledby="#modal-alors-on-a-du-mal-a-comprendre-safe-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Alors on a du mal à comprendre SAFe ?</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="AJ" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Atelier/Jeu</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						SAFe c’est quoi ? Program Increment, PI planning, conducteur de train? Je ne comprends rien à votre charabia! C’est vraiment Agile vôtre affaire? On m’a parlé de NEXUS ou de LESS ce n’est pas mieux ?
+						<br/><br/>
+						Nous allons tenter de répondre à ces interrogations tout en en expliquant les mécanismes de façon simple, sans être simpliste, et compréhensible par tous. Nous voulons expliquer et démystifier ce Framework et son côté effrayant de par sa complexité, mais en gardant un regard critique sur celui-ci, notamment en le comparant à d’autres.  Et en s’appuyant sur notre expérience dans la mise en œuvre SAFe et de l’agilité en générale au sein de grandes entreprises.
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/gwenael-moal.jpg" style="height:8rem"/>
+						Gwénaël Moal - <a href="https://twitter.com/gwenaelmoal">@gwenaelmoal</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Coach Agile et formateur Agile/Innovation à l’Agence digitale OAIO, dans la production logicielle depuis une vingtaine d’années. Toujours en quête de manières de travailler mieux, de donner du sens à ce que l’on fait, et finalement persuadé que la réponse est principalement dans l’humain.  C'est dans cette optique d’apprentissage continue que je cherche également à partager mon expérience en Agilité et sa mise en œuvre au sein de grandes entreprises.
+					</p>
+					<hr/>
+					<div>
+						<img src="orateurs/guillaume-letrou.png" style="height:8rem"/>
+						Guillaume Le Trou
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Manager dans les technologies de l’information depuis 20 ans pour une grande variété d’entreprises et de secteurs, en France et à l’international, avec une culture projet incluant qualité et maintenance, je diffuse l’agilité et l’adapte à des contextes très différents au quotidien depuis 2010. Acteur du changement depuis mes débuts (projets métiers, mutations techniques, externalisations, réorganisations, transformation agile, mise en place de processus ou de normes…), je m’intéresse tout particulièrement aux changements de culture et aux nouvelles postures managériales associées permettant de faire face aux enjeux et attentes du monde actuel.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-la-spirale-agile-1" tabindex="-1" role="dialog" aria-labelledby="#modal-la-spirale-agile-1-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>La Spirale Agile</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="CF" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Conférence</div>
+					</div>
+					<hr/>
+					<p style="text-align: justify">
+						Vous avez peut être lu "Reinventing Organization" de Frédéric Laloux, son analyse se base sur la "Spirale Dynamique".
+						<br/>
+						C'est une théorie qui démontre que les individus et les organisations suivent les mêmes cycles d'évolutions que l'humanité toute entière (son autre nom "La Théorie de l’Émergence Cyclique des Niveaux d’Existence")
+						<br/>
+						Elle est utilisée autant comme base de thérapie par des praticiens de la santé, en politique (Nelson Mandela l'a utilisé lors de la sortie de l’apartheid), ou encore en coaching car elle est une grille de lecture des valeurs d'un individu ou d'un groupe.
+						<br/>
+						Puisque l'agilité s'intéresse aux individus et à leurs interactions,  j'ai décliné cette théorie sur l'agilité pour créer ce que j'ai appelé la "Spirale Agile".
+						<br/>
+						Je vous propose de découvrir cette grille de lecture, cet outil de coaching qui peut venir en aide aux équipes agiles et aux managers pour  :
+						<br/>
+						- Se définir un objectif de transformation agile
+						<br/>
+						- Comprendre son état agile du moment
+						<br/>
+						- Définir ses valeurs et aligner ses pratiques
+						<br/>
+						- Tirer profit de ses forces
+						<br/>
+						- Comprendre les enjeux et prérequis d'une transformation
+						<br/>
+						Bref "Être mieux Agile" !
+						<br/>
+						Un jeu de carte utilisé en coaching d'équipe pourra être utilisé en séance
+					</p>
+					<hr/>
+					<div>
+						David Desfougeres - <a href="https://twitter.com/ddesfougeres">@ddesfougeres</a>
+					</div>
+					<br/>
+					<p style="text-align: justify">
+						Agile depuis 2010 puis coach agile d'équipes, interne à un grand groupe de télécommunication, de codir, et responsable du lancement d'une transformation "à l'échelle" d'une organisation de 1000 personnes. J'ai créé mon entreprise "Allagi" pour devenir coach professionnel et accompagner les managers sur la route de la confiance en leurs équipes.
+						<br/>
+						Le parcours de certification au coaching professionnel m’a fait approfondir la « spirale dynamique », grille de lecture que j’utilise désormais comme outil agile.
 					</p>
 				</div>
 			</div>
