Keynotes samedi OK

--- a/tests/samedi_v2.html
+++ b/tests/samedi_v2.html
@@ -203,11 +203,14 @@
 					<div>
 						<div class="debut heure">9h30</div>
 						<div class="salle heure">GC</div>
-						<div class="parent grid-item--height4">
-							<div class="enfant">
-								<h3>Keynote #3 : Emilie ESPOSITO</h3>
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-keynote-emilie-esposito">
+							<div class="parent grid-item--height4">
+								<div class="enfant" style="display: flex;align-items: center;">
+									<img src="orateurs/keynoter-emilie-esposito.jpg" style="height:8rem"/>
+									<h3>Keynote #3 : Emilie ESPOSITO</h3>
+								</div>
 							</div>
-						</div>
+						</a>
 						<div class="fin heure">10h30</div>
 					</div>
 				</div>
@@ -388,11 +391,14 @@
 					<div>
 						<div class="debut heure">13h30</div>
 						<div class="salle heure">GC</div>
-						<div class="parent grid-item--height4">
-							<div class="enfant">
-								<h3>Keynote #4 : THIAGI</h3>
+						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-keynote-thiagi">
+							<div class="parent grid-item--height4">
+								<div class="enfant" style="display: flex;align-items: center;">
+									<img src="orateurs/keynoter-thiagi.jpg" style="height:8rem"/>
+									<h3>Keynote #4 : THIAGI</h3>
+								</div>
 							</div>
-						</div>
+						</a>
 						<div class="fin heure">14h30</div>
 					</div>
 				</div>
@@ -737,6 +743,36 @@
 		</button>
 	</div>
 
+	<div class="modal fade" id="modal-keynote-emilie-esposito" tabindex="-1" role="dialog" aria-labelledby="#modal-keynote-emilie-esposito-label"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Keynote #3 : Emilie Esposito</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="KN" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Keynote</div>
+					</div>
+					<hr/>
+					<div style="display: flex;align-items: center">
+						<img src="orateurs/keynoter-emilie-esposito.jpg" style="height:8rem"/>
+						<div class="m-2" style="text-align: justify">
+							Depuis 12 ans, je développe mon agilité. J’ai d’abord été scrum master, product owner et coach agile dans des contextes Scrum. L’expérience m’a montré qu’une équipe ne pouvait tirer les fruits de l’agilité que si le système autour de l’équipe était agile aussi. Peu à peu, je suis passée du côté obscur des agilistes : les partisans du #noframework, qui parlent de culture agile plus que de déploiement de méthodes agiles.
+							<br/>
+							Dans les équipes que j’ai accompagnées, j’ai trop souvent observé la souffrance au travail : décalage entre le discours managérial et la réalité du quotidien, processus lourds et inadaptés, imposés par des décisions top-down, déshumanisation du travail… Et cette souffrance était souvent accentuée par les « transformations agiles » menées par les entreprises. Ces mêmes transformations agiles censées remettre l’humain au centre…
+							<br/>
+							J’ai créé Peps pour lutter à mon échelle. Je veux contribuer à construire le monde du travail de demain, où performance rime avec épanouissement. Et je suis convaincue que la culture agile permet d’améliorer la performance des entreprises tout en créant un cadre propice à l’épanouissement des collaborateurs.
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="modal fade" id="modal-kiffer-son-job-ca-booste" tabindex="-1" role="dialog" aria-labelledby="#modal-kiffer-son-job-ca-booste-label"
 		 aria-hidden="true">
 		<div class="modal-dialog modal-lg" role="document">
@@ -846,6 +882,38 @@
 						Camille Richer, 27 ans, je suis professeur de sport diplômé de l'INSEP (PSHN) détaché auprès de la fédération française de Canoë Kayak en tant que Conseillé Technique Régional. En parallèle, je poursuis ma carrière d'entraineur/joueur de kayak polo au Club de Saint-Grégoire au plus haut niveau. J'accompagne également les athlètes de ma fédération dans leurs préparations physiques et mentales toutes disciplines confondues.
 					</p>
 					<hr/>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-keynote-thiagi" tabindex="-1" role="dialog" aria-labelledby="#modal-keynote-thiagi"
+		 aria-hidden="true">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body">
+					<div style="display: flex; justify-content: space-between">
+						<h2>Keynote #4 : Thiagi</h2>
+						<a href="#" data-dismiss="modal">X</a>
+					</div>
+					<hr/>
+					<div style="display:flex">
+						<div class="KN" style="width:2rem">&nbsp;</div>
+						<div style="margin-left:1rem">Keynote</div>
+					</div>
+					<hr/>
+					<div style="display: flex;align-items: center">
+						<img src="orateurs/keynoter-thiagi.jpg" style="height:8rem"/>
+						<div class="m-2" style="text-align: justify">
+							Dr. Sivasailam “Thiagi” Thiagarajan is the founder and Resident Mad Scientist at The Thiagi Group, an organization with the mission of helping people improve their performance effectively and enjoyably.
+							<br/>
+							Thiagi served as the editor of ISPI’s Performance & Instruction for more than 10 years. He has written a monthly GameLetter for 15 years; it currently appears as the GameBlog on this website.
+							<br/>
+							Thiagi has twice been elected the president of the International Society for Performance Improvement (ISPI), 27 years apart (in 1979 and 2006). He has also been the five-time president of the North American Simulation and Gaming Association (NASAGA).
+							<br/>
+							As a global nomad, Thiagi has lived in three different countries and has conducted training workshops in 21 others. Earlier in his life, he has been a high-school science teacher, street corner magician, researcher, editor of a professional journal, keynote speaker, college professor, USAID project director, and writer.
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
