--- a/tests/vendredi.html
+++ b/tests/vendredi.html
@@ -1091,7 +1091,7 @@ J’organise et anime des ateliers sur la facilitation graphique, j’ai partici
 					</p>
 					<hr/>
 					<div>
-						<img src="orateurs/sylvie_le_bail.png" style="height:8rem"/>
+						<img src="orateurs/sylvie-le-bail.png" style="height:8rem"/>
 						Sylvie Le Bail - <a href="https://twitter.com/SylvieLEBAIL">@SylvieLEBAIL</a>
 					</div>
 					<br/>
